Design: 프로젝트 설명 카드 아이콘 수정

--- a/index.html
+++ b/index.html
@@ -398,52 +398,53 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i>
-                      공지사항, 일정페이지, 오픈프로필 페이지, 전체 검색 페이지,
-                      알림 모달, 헤더(메뉴), 푸터 UI 및 기능 구현
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >공지사항, 일정페이지, 오픈프로필 페이지, 전체 검색
+                      페이지, 알림 모달, 헤더(메뉴), 푸터 UI 및 기능 구현
                     </li>
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i> 각 페이지
-                      마다 페이지네이션 또는 무한스크롤 적용, 반응형 웹 적용
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >각 페이지 마다 페이지네이션 또는 무한스크롤 적용, 반응형
+                      웹 적용
                     </li>
                   </ul>
                 </section>
                 <section class="description-content detail">
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">1</p>
                       Intersection Observer API와 react-query에
                       useInfiniteQuery를 사용하여 무한스크롤 적용
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">2</p>
                       CSS 미디어 쿼리를 사용하여 데스크탑, 태블릿, 모바일 각
                       사이즈로 반응형 웹 적용
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">3</p>
                       Full-Calendar 라이브러리를 이용하여 서버에서 응답 받은
                       중요 일정 데이터를 캘린더에 적용
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">4</p>
                       공지사항 페이지 검색창에 디바운싱을 활용하여 사용자가
                       타이핑이 끝난 후에 이벤트를 호출할 수 있도록 하여 이벤트를
                       최적화 함
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">5</p>
                       코드 유지보수성 및 재활용성을 높이기 위해 컴포넌트 추상화
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">6</p>
                       댓글 알림 및 중요 일정 알림을 서버와 polling 방식으로
                       응답을 주고 받아 실시간으로 업데이트하여 사용자에게 최신
                       정보를 지속적으로 전달
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">7</p>
                       react-query를 통해 서버에 요청하여 받아온 데이터를
                       캐싱하여, 이후 동일한 요청을 할 때 불필요한 서버 호출을
                       최소화
@@ -560,16 +561,16 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i> 서버 구축,
-                      상품 및 카테고리 스키마 설계
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >서버 구축, 상품 및 카테고리 스키마 설계
                     </li>
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i>
-                      관리자 페이지 카테고리 목록, 상품 CRUD API 구현
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >관리자 페이지 카테고리 목록, 상품 CRUD API 구현
                     </li>
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i>
-                      메인페이지 상품 검색, 상품 목록(필터 및 페이지네이션),
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >메인페이지 상품 검색, 상품 목록(필터 및 페이지네이션),
                       상품상세 API 구현
                     </li>
                   </ul>
@@ -577,25 +578,25 @@
                 <section class="description-content detail">
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i> Express를
-                      이용하여 웹 서버 구축
+                    <li class="description-text-list">
+                      <p class="description-num-icon">1</p>
+                      Express를 이용하여 웹 서버 구축
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i> Express를
-                      이용하여 미들 웨어를 통한 에러 핸들링 로직 구현 하여
-                      유지보수 및 가독성 높임
+                    <li class="description-text-list">
+                      <p class="description-num-icon">2</p>
+                      Express를 이용하여 미들 웨어를 통한 에러 핸들링 로직 구현
+                      하여 유지보수 및 가독성 높임
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i> Express를
-                      이용하여 CRUD RESTfull API를 구현함
+                    <li class="description-text-list">
+                      <p class="description-num-icon">3</p>
+                      Express를 이용하여 CRUD RESTfull API를 구현함
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i> POSTMAN으로
-                      구현한 API 기능을 문서화(명세서) 함
+                    <li class="description-text-list">
+                      <p class="description-num-icon">4</p>
+                      POSTMAN으로 구현한 API 기능을 문서화(명세서) 함
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i>
+                    <li class="description-text-list">
+                      <p class="description-num-icon">5</p>
                       MVC 패턴을 적용하여 코드간의 종속성을 줄이고 구성요소간의
                       역할을 명확하게 하여 유지보수성을 높임
                     </li>
@@ -692,8 +693,8 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i>
-                      관리자 페이지 게임 정보 등록, 카테고리 등록, 게임 기록
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >관리자 페이지 게임 정보 등록, 카테고리 등록, 게임 기록
                       관리 (상세보기, 삭제) , 회원 관리 (회원 탈퇴) 기능 및 UI
                       구현
                     </li>
@@ -781,33 +782,33 @@
                   <p class="description-content-title">[역할]</p>
                   <ul class="description-text">
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i>
-                      Chart.js 라이브러리 활용하여 재고 현황 동적인 그래프
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >Chart.js 라이브러리 활용하여 재고 현황 동적인 그래프
                       시각화 구현
                     </li>
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i>
-                      아이템 및 디바이스별로 재고 현황 상세 확인 , 재고관리
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >아이템 및 디바이스별로 재고 현황 상세 확인 , 재고관리
                       (추가, 수정, 삭제) UI 및 기능 구현
                     </li>
                     <li>
-                      <i class="check-icon fa-solid fa-check"></i> 날짜와 시간을
-                      지정하여 보고서 다운로드, 보고서 작성 시간 알림 지정 UI 및
-                      기능 구현
+                      <i class="fa-solid fa-circle-check description-icon"></i
+                      >지정하여 보고서 다운로드, 보고서 작성 시간 알림 지정 UI
+                      및 기능 구현
                     </li>
                   </ul>
                 </section>
                 <section class="description-content detail">
                   <p class="description-content-title">[성과]</p>
                   <ul class="description-text">
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i> Chart.js
-                      라이브러리의 각종 옵션 및 플러그인들을 커스텀하여 활용
-                      가능
+                    <li class="description-text-list">
+                      <p class="description-num-icon">1</p>
+                      Chart.js 라이브러리의 각종 옵션 및 플러그인들을 커스텀하여
+                      활용 가능
                     </li>
-                    <li>
-                      <i class="check-icon fa-solid fa-check"></i> Chart.js를
-                      이용하여 동적인 그래프 및 각종 차트 구현 가능
+                    <li class="description-text-list">
+                      <p class="description-num-icon">2</p>
+                      Chart.js를 이용하여 동적인 그래프 및 각종 차트 구현 가능
                     </li>
                   </ul>
                 </section>
