--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                 </li>
                 <li>
                   <i class="fa-solid fa-circle-check description-icon"></i
-                  >라이프 사이클에 대해 이해하고 있으며 이를 활용하여 렌더링을
-                  최적화 할 수 있습니다.
+                  >렌더링을 실행하는 시점에 대해 이해하고 있으며, 이를 이용해
+                  렌더링을 최적화 할 수 있습니다.
                 </li>
                 <li>
                   <i class="fa-solid fa-circle-check description-icon"></i>react
