--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </li>
                 <li>
                   <i class="fa-solid fa-circle-check description-icon"></i
-                  >크로스 브라우징(Cross Browsing)을 해결할 수 있어 다양한 웹
+                  >크로스 브라우징(Cross Browsing)을 고려하여 다양한 웹
                   브라우저에서 웹 페이지가 일관되게 동작하도록 할 수 있습니다.
                 </li>
                 <li>
